2008-09-04  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimpreloc.c (set_gerror): made the error_message
	variable const.

2008-09-04  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimpbasetypes.h
	(struct GimpEnumDesc)
	(struct GimpFlagsDesc): made the value_desc and value_help members
	const, just as the corresponding GEnumValue and GFlagsValue
	members. This is technically an API change but shouldn't hurt
	since it totally reflects how they are used.

2008-09-04  Michael Natterer  <mitch@gimp.org>

	* plug-ins/color-rotate/color-rotate-callbacks.c
	* plug-ins/common/filter-pack.c
	* plug-ins/common/nova.c
	* plug-ins/common/sample-colorize.c: get rid of calls to
	gdk_window_get_pointer(), use the coords from the motion event
	and use gdk_event_request_motions().

	* plug-ins/color-rotate/color-rotate-callbacks.[ch]: some
	unrelated cleanup while i was at it.

2008-09-04  Sven Neumann  <sven@gimp.org>

	* app/composite/make-installer.py
	* app/composite/ns.py
	* app/dialogs/tips-dialog.c
	* app/display/gimpdisplayshell-callbacks.c
	* app/display/gimpdisplayshell-scroll.c
	* app/display/gimpdisplayshell.c
	* app/display/gimpnavigationeditor.c
	* app/paint/gimppaintcore-stroke.c
	* app/tools/gimpcroptool.c
	* app/widgets/gtkscalebutton.c
	* plug-ins/common/animation-play.c
	* plug-ins/common/displace.c
	* plug-ins/common/file-raw.c
	* plug-ins/imagemap/imap_cern_lex.c
	* plug-ins/imagemap/imap_cern_parse.c
	* plug-ins/imagemap/imap_csim_lex.c
	* plug-ins/imagemap/imap_csim_parse.c
	* plug-ins/imagemap/imap_ncsa_lex.c
	* plug-ins/imagemap/imap_ncsa_parse.c
	* plug-ins/pygimp/gimpfu.py
	* plug-ins/pygimp/gimpshelf.py
	* plug-ins/pygimp/gimpthumbmodule.c
	* plug-ins/pygimp/gimpui.py
	* plug-ins/pygimp/gimpuimodule.c
	* plug-ins/pygimp/plug-ins/benchmark-foreground-extract.py
	* plug-ins/pygimp/plug-ins/foggify.py
	* plug-ins/pygimp/plug-ins/palette-offset.py
	* plug-ins/pygimp/plug-ins/palette-sort.py
	* plug-ins/pygimp/plug-ins/palette-to-gradient.py